Fix a11y contrast ratio issue  🐿 v2.12.4

--- a/main.scss
+++ b/main.scss
@@ -94,7 +94,7 @@
 		}
 
 		label small {
-			color: oColorsMix(black, white, 50);
+			color: oColorsMix(black, white, 70);
 			font-weight: normal;
 		}
 	}
